# ICRA2019

./: .gitignore  README.md
Docs/: README.md  roborts_base.md  topic.md
Docs/src/topic_demo/: CMakeLists.txt  package.xml
Docs/src/topic_demo/src/: Publisher.py  Subscriber.py
Latex/: 2.md  3.4&3.4.1(chn).md  3.4.4(Path planning.docx  3.4and3.4.1.md  3.md  4.md  Technical+report.docx  main.tex  technical solution.tex
Latex/sections/: decision.tex  embedded_system.tex  frontpage.tex  hardware.tex  reference.tex  software.tex  taskspreview.tex
Latex/setup/: preamble.tex
Ros/: readme.md
Ros/src/: topic.md
Ros/src/base_demo/: CMakeLists.txt  base.md  package.xml
Ros/src/base_demo/src/: base_control_demo.py  keyboard_teleop.py  supply.py
Ros/src/bringup_demo/: CMakeLists.txt  package.xml
Ros/src/bringup_demo/config/: armor_detection.prototxt  camera_param.prototxt  localization.yaml  localization_config.h
Ros/src/bringup_demo/launch/: mapping.launch  roborts.launch  scan_filter_config.yaml  slam_gmapping.xml  static_tf.launch
Ros/src/decision_demo/: CMakeLists.txt  package.xml
Ros/src/detection_demo/: CMakeLists.txt  package.xml
Ros/src/icra2019/: CMakeLists.txt  package.xml
Ros/src/map_demo/: CMakeLists.txt  package.xml
Ros/src/nav_demo/: CMakeLists.txt  package.xml
Ros/src/shoot_demo/: CMakeLists.txt  package.xml
Technical Proposal/: Technical Proposal.docx
Technical Report/: .~lock.Technical Report(lanj).docx#  1.1.md  1.2.md  1.3.md  2.1.md  2.2.md  2.3.md  2.4.md  2.5.md  2.6.md  Technical Report(lanj).docx  Technical Report.docx
(+28 files in other folders)
